# minimal-mcp

./: .gitignore  Makefile  Procfile  README.md  USAGE.md  env.example  pyproject.toml  railway.toml  requirements.txt  setup_local.py  test_live.py  test_production.py  test_production_dual.py  test_sse.py
app/: server.py
mcp_private_db/: __init__.py  config.py  embedder.py  main.py  pinecone_client.py  schemas.py  tools.py  utils.py
tests/: test_tools.py
